syntax = "proto3";

package demo;

option java_package = "xyz.alexakarpov.proto.demo";
option java_multiple_files = true;

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GreetResponse {
    string result = 1;
}

message Addition {
    int32 firstNum = 1;
    int32 secondNum = 2;
}

message AddRequest {
    Addition addition = 1;
}

message AddResponse {
    int32 result = 1;
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

service GreetService {
    //unary
    rpc Greet (GreetRequest) returns (GreetResponse) {};
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {}
}

service MathService {
    rpc Add (AddRequest) returns (AddResponse) {};
}
